--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" id="edit">
+<html lang="en-US" id="reverse">
 <meta charset="utf-8">
 <title>interstate contenteditable</title>
 <meta name=viewport content="width=device-width, initial-scale=1">
