--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   <strong contenteditable>I-404</strong>
   <footer>
     <a rel="home" href="https://webmural.com">home</a>
-    <a rel="next" href="https://webmural.com/404">next</a>
+    <a rel="next" href="https://webmural.com/creatoreditable">next</a>
   </footer>
 </figure>
