--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name=color-scheme content="dark">
 <meta name=theme-color content="crimson">
 <meta name=description content="contenteditable interstate sign">
+<link rel="help" href="https://webmural.dev/interstate">
 <link rel="stylesheet" href="color.css" media=(color)>
 <link rel="stylesheet" href="index.css">
 <link rel="license" href="UNLICENSE.txt">
